# job_parser

./: README.md  main.py  pyproject.toml  requirements.txt
src/: JSONSaver.py  abs.py  config.py  creates_vacancy.py  head_hunter.py  main.py  save_jsonHH.py  save_jsonSJ.py  super_job.py  utils.py
src/references/: area_hh.json  area_sj.json  vacancy.json  vacancy_hh.json  vacancy_sj.json  vacancyft.json  vacancyop.json
