[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["avedineev <avedineev69@gmail.com>"]
readme = "README.md"
packages = [{include = "job_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
useragent = "^0.1.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
